--- a/src/cone/activities/browser/static/index.html
+++ b/src/cone/activities/browser/static/index.html
@@ -2,12 +2,19 @@
 	
 	<head>
 		<title>Activities</title>
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js"></script> 
+		<script src="activities.js"></script>
 	</head>
 	
 	<body>
 		
-		<div class="activities_editor">
-			Hello World
+		<div id="level_0">
+			
+			<!-- toolbar goes here -->
+			
+			<!-- a single diagram -->
+			<canvas id="diagram_level_0" width="800" height="450"></canvas>
+			
 		</div>
 		
 	</body>
