basically rendering mechanism and activity drawing

--- a/src/cone/activities/browser/static/index.html
+++ b/src/cone/activities/browser/static/index.html
@@ -4,11 +4,12 @@
 		<title>Activities</title>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js"></script> 
 		<script src="activities.js"></script>
+		<link href="activities.css" rel="stylesheet" type="text/css" media="screen" />
 	</head>
 	
 	<body>
 		
-		<div id="level_0">
+		<div class="activity_editor" id="level_0">
 			
 			<!-- toolbar goes here -->
 			
