--- a/src/cone/activities/browser/static/index.html
+++ b/src/cone/activities/browser/static/index.html
@@ -18,6 +18,12 @@
 			
 		</div>
 		
+		<a href="javascript:activities.tests.run('.activity_editor_test_out')">
+			Run tests
+		</a>
+		
+		<div class="activity_editor_test_out"></div>
+		
 	</body>
 	
 </html>
