move tests to separat file

--- a/src/cone/activities/browser/static/index.html
+++ b/src/cone/activities/browser/static/index.html
@@ -5,6 +5,7 @@
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js"></script> 
 		<script src="http://code.jquery.com/qunit/git/qunit.js"></script>
 		<script src="activities.js"></script>
+		<script src="test_activities.js"></script>
 		<link href="http://code.jquery.com/qunit/git/qunit.css" rel="stylesheet" type="text/css" media="screen" />
 		<link href="activities.css" rel="stylesheet" type="text/css" media="screen" />
 	</head>
@@ -20,7 +21,7 @@
 			
 		</div>
 		
-		<a href="javascript:jQuery('.qunit').show(); activities.tests.run()"
+		<a href="javascript:jQuery('.qunit').show(); tests.run()"
 		   class="runtests">
 			Run tests
 		</a>
