--- a/src/cone/activities/browser/static/index.html
+++ b/src/cone/activities/browser/static/index.html
@@ -14,18 +14,16 @@
 		
 		<div class="activity_editor"
 		     id="level_0"
-			 style="height:450px;">
+			 style="height:480px;">
 			
-			<!-- toolbar goes here -->
-			
-			<!-- a single diagram -->
-			<canvas class="flow" id="flow_level_0" width="800" height="450"></canvas>
+			<!-- single diagram layers -->
+			<canvas class="control" id="control_level_0" width="800" height="450"></canvas>
 			<canvas class="diagram" id="diagram_level_0" width="800" height="450"></canvas>
 			
 		</div>
 		
 		<div class="status"></div>
-		
+		<br />
 		<a href="javascript:jQuery('.qunit').show(); tests.run()">
 			Run tests
 		</a>
