add editor object and properties object

--- a/src/cone/activities/browser/static/index.html
+++ b/src/cone/activities/browser/static/index.html
@@ -13,9 +13,12 @@
 	<body>
 		
 		<!-- activity editor markup -->
-		<div class="activity_editor">
+		<div class="activity_editor"
+		     id="level_0">
 			<div class="element_properties">
-                props
+                <h3 class="head"></h3>
+				<div class="props">
+				</div>
             </div>
 			<div class="actions">
 				<a href="javascript:tests.run()">
@@ -27,7 +30,6 @@
                 </a>
 			</div>
 			<div class="activity_diagram"
-			     id="level_0"
 				 style="height:480px;">
 				<!-- single diagram layers -->
 				<canvas class="control"
