work on properties pane

--- a/src/cone/activities/browser/static/index.html
+++ b/src/cone/activities/browser/static/index.html
@@ -16,7 +16,8 @@
 		<div class="activity_editor"
 		     id="level_0">
 			<div class="element_properties">
-                <h3 class="head"></h3>
+				<strong>Properties</strong>
+				<hr />
 				<div class="props">
 				</div>
             </div>
