--- a/src/cone/activities/browser/static/index.html
+++ b/src/cone/activities/browser/static/index.html
@@ -75,6 +75,9 @@
                 
                 <!-- development related -->
                 <div class="section">
+                    <a href=""
+                       title="Debug"
+                       class="debug">&nbsp;</a>
                     <a href="javascript:tests.run()"
                        title="Run Tests"
                        class="run_tests">&nbsp;</a>
