not implemented messages for not implemented actions

--- a/src/cone/activities/browser/static/index.html
+++ b/src/cone/activities/browser/static/index.html
@@ -33,7 +33,7 @@
                 <strong>Properties</strong>
                 <div class="props">
                 </div>
-                <div class="status">
+                <div class="status hidden">
                 </div>
                 <input type="button"
                        name="update"
@@ -48,38 +48,38 @@
                 <div class="section">
                     <a href="#"
                        title="New"
-                       class="new">&nbsp;</a>
+                       class="new_activity">&nbsp;</a>
                     <a href="#"
                        title="Open"
-                       class="open">&nbsp;</a>
+                       class="open_activity">&nbsp;</a>
                     <a href="#"
                        title="Save"
-                       class="save">&nbsp;</a>
+                       class="save_activity">&nbsp;</a>
                 </div>
                 
                 <!-- diagram related -->
                 <div class="section">
                     <a href="#"
                        title="Initial Node"
-                       class="initial">&nbsp;</a>
+                       class="initial_node">&nbsp;</a>
                     <a href="#"
                        title="Final Node"
-                       class="final">&nbsp;</a>
+                       class="final_node">&nbsp;</a>
                     <a href="#"
                        title="Action"
-                       class="action">&nbsp;</a>
+                       class="action_node">&nbsp;</a>
                     <a href="#"
                        title="Join"
-                       class="join">&nbsp;</a>
+                       class="join_node">&nbsp;</a>
                     <a href="#"
                        title="Fork"
-                       class="fork">&nbsp;</a>
+                       class="fork_node">&nbsp;</a>
                     <a href="#"
                        title="Merge"
-                       class="merge">&nbsp;</a>
+                       class="merge_node">&nbsp;</a>
                     <a href="#"
                        title="Decision"
-                       class="decision">&nbsp;</a>
+                       class="decision_node">&nbsp;</a>
                     <a href="#"
                        title="Edge"
                        class="edge">&nbsp;</a>
@@ -87,13 +87,13 @@
                 
                 <!-- development related -->
                 <div class="section">
-                    <a href=""
+                    <a href="#"
                        title="Debug"
                        class="debug">&nbsp;</a>
-                    <a href="javascript:tests.run()"
+                    <a href="#"
                        title="Run Tests"
                        class="run_tests">&nbsp;</a>
-                    <a href="javascript:activities.ui.toggleCanvas('level_0')"
+                    <a href="#"
                        title="Flip Layers"
                        class="flip_layers">&nbsp;</a>
                 </div>
