model node creation

--- a/src/cone/activities/browser/static/index.html
+++ b/src/cone/activities/browser/static/index.html
@@ -83,6 +83,9 @@
                     <a href="#"
                        title="Edge"
                        class="edge">&nbsp;</a>
+                    <a href="#"
+                       title="Delete Element"
+                       class="delete_element">&nbsp;</a>
                 </div>
                 
                 <!-- development related -->
