fix add egde bug

--- a/src/cone/activities/browser/static/index.html
+++ b/src/cone/activities/browser/static/index.html
@@ -106,7 +106,7 @@
             <div class="activity_diagram"
                  style="height:480px;">
                 
-                <!-- control layers -->
+                <!-- control layer -->
                 <canvas class="control"
                         id="control_level_0"
                         width="1200"
