--- a/src/cone/activities/browser/static/index.html
+++ b/src/cone/activities/browser/static/index.html
@@ -60,13 +60,13 @@
         </script>
 
         <script type="text/html" id="diagram_template">
-          <div class="diagram_container" id="${name}"  style="height:${height}px;">
-            <div class="element_properties"  style="height:${height - 10}px;">
+          <div class="diagram_container" id="${name}">
+            <div class="element_properties">
               No Element selected
             </div>
-            <div class="activity_diagram">
+            <div class="canvas_container">
             </div>
-            <div class="actionbar" />
+            
           </div>
         </script>
       
