--- a/src/cone/activities/browser/static/index.html
+++ b/src/cone/activities/browser/static/index.html
@@ -45,7 +45,7 @@
           <strong>Properties</strong>
           <div class="props">
             {{each hidden}}
-            <input type="hidden" name="${$index}" value="${$value}" >
+            <input type="input" name="${$index}" value="${$value}" >
             {{/each}}
             {{each singleline}}
             <input type="input" name="${$index}" value="${$value}" >
