--- a/src/cone/activities/browser/static/index.html
+++ b/src/cone/activities/browser/static/index.html
@@ -73,6 +73,22 @@
     <!-- demo editor -->
     <div id="demo_editor" class="activity_editor"></div>
 
+    <!-- tapta app -->
+    <div id="tapta_app" class="tapta_app">
+      <div id="layers" class="layers">
+      </div>
+    </div>
+
+    <!-- templates -->
+    <script type="text/template" id="layer-template">
+      <div id="left-pane" class="pane">
+      </div>
+      <div id="activity" class="activity">
+      </div>
+      <div id="right-pane" class="pane">
+      </div>
+    </script>
+
     <!-- qunit related -->
     <div class="qunit">
       <h1 id="qunit-header">cone.activities QUnit</h1>
