actiobar events translate to acts

--- a/tapta/index.html
+++ b/tapta/index.html
@@ -43,11 +43,11 @@
     </script>
     <script type="text/template" id="actionbar_template">
       <ul class="menubar">
-        <li class="add_action">
+        <li class="new_node new_action">
         </li>
-        <li class="add_dec">
+        <li class="new_node new_decmer">
         </li>
-        <li class="add_fork">
+        <li class="new_node new_forkjoin">
         </li>
         <li class="delete">
         </li>
