--- a/tapta/index.html
+++ b/tapta/index.html
@@ -49,7 +49,7 @@
         </li>
         <li class="new_node new_forkjoin">
         </li>
-        <li class="delete">
+        <li class="remove">
         </li>
       </ul>
     </script>
