destroy all "button"

--- a/tapta/index.html
+++ b/tapta/index.html
@@ -74,6 +74,9 @@
 
     <!-- tapta app -->
     <div id="tapta_app" class="tapta_app">
+      <div id="destroyall">
+        DESTROY ALL
+      </div>
       <div id="layers" class="layers">
       </div>
     </div>
