mode:selecting - no proper symbol yet

--- a/tapta/index.html
+++ b/tapta/index.html
@@ -43,6 +43,9 @@
     </script>
     <script type="text/template" id="actionbar_template">
       <ul class="menubar">
+        <li class="select">
+          Select
+        </li>
         <li class="new_node new_action">
         </li>
         <li class="new_node new_decmer">
