renamed cdn -> vendor, most of it is not in cdn

--- a/tapta/index.html
+++ b/tapta/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>TaPTa</title>
-    <script data-main="bootstrap" src="cdn/require-jquery.js"></script>
+    <script data-main="bootstrap" src="vendor/require-jquery.js"></script>
     <link href="activities.css"
           rel="stylesheet"
           type="text/css"
