--- a/tapta/tests.html
+++ b/tapta/tests.html
@@ -1,12 +1,12 @@
 <html>
   <head>
     <title>TaPTa Tests</title>
-    <link href="cdn/qunit.css"
+    <link href="vendor/qunit.css"
           rel="stylesheet"
           type="text/css"
           media="screen" />
     <script data-main="activities/tests.js"
-            src="cdn/require-jquery.js"></script>
+            src="vendor/require-jquery.js"></script>
   </head>
   <body>
     <div class="qunit">
