css from scratch: tapta.css

--- a/tapta/index.html
+++ b/tapta/index.html
@@ -2,7 +2,7 @@
   <head>
     <title>TaPTa</title>
     <script data-main="bootstrap" src="vendor/require-jquery.js"></script>
-    <link href="activities.css"
+    <link href="tapta.css"
           rel="stylesheet"
           type="text/css"
           media="screen" />
