--- a/tapta/index.html
+++ b/tapta/index.html
@@ -75,13 +75,13 @@
       </div>
     </script>
 
+    <div id="destroyall">
+      DESTROY ALL
+    </div>
+    
     <!-- tapta app -->
     <div id="tapta_app" class="tapta_app">
-      <div id="destroyall">
-        DESTROY ALL
-      </div>
-      <div id="layers" class="layers">
-      </div>
+      Nothing was rendered
     </div>
 
     <!-- templates -->
