added decogrid - removed previous CSS experiment

--- a/tapta/index.html
+++ b/tapta/index.html
@@ -2,6 +2,10 @@
   <head>
     <title>TaPTa</title>
     <script data-main="bootstrap" src="vendor/require-jquery.js"></script>
+    <link href="decogrids-12.css"
+          rel="stylesheet"
+          type="text/css"
+          media="screen" />
     <link href="tapta.css"
           rel="stylesheet"
           type="text/css"
