viewport user-scalable=no for mobile devices
this enables immediate click events

--- a/tapta/index.html
+++ b/tapta/index.html
@@ -1,6 +1,11 @@
 <html>
   <head>
     <title>TaPTa</title>
+    <!-- Tells mobile browsers the width of the page. seems not to be
+    needed with out fixed size grid, but maybe later.
+    <meta name="viewport" content="width=device-width, user-scalable=no" />
+    -->
+    <meta name="viewport" content="user-scalable=no" />
     <script data-main="bootstrap" src="vendor/require-jquery.js"></script>
     <link href="decogrids-12.css"
           rel="stylesheet"
