graphview handles selected

--- a/tapta/index.html
+++ b/tapta/index.html
@@ -16,7 +16,7 @@
           type="text/css"
           media="screen" />
   </head>
-  <body>
+  <body id="body">
     <!-- tapta app -->
     <div id="tapta_app" class="tapta_app">
       Nothing was rendered
