--- a/tapta/index.html
+++ b/tapta/index.html
@@ -8,13 +8,15 @@
     <meta name="viewport" content="user-scalable=no" />
     <script data-main="bootstrap" src="vendor/require-jquery.js"></script>
     <link href="decogrids-12.css"
-          rel="stylesheet"
-          type="text/css"
-          media="screen" />
+          rel="stylesheet" type="text/css" media="screen" />
     <link href="tapta.css"
-          rel="stylesheet"
-          type="text/css"
-          media="screen" />
+          rel="stylesheet" type="text/css" media="screen" />
+    <link href="decogrids-12.css"
+          rel="stylesheet" type="text/css" media="print" />
+    <link href="tapta.css"
+          rel="stylesheet" type="text/css" media="print" />
+    <link href="print.css"
+          rel="stylesheet" type="text/css" media="print" />
   </head>
   <body id="body">
     <!-- tapta app -->
